asset rules completed

--- a/6-Data_Prep/route/routeFinder.ipynb
+++ b/6-Data_Prep/route/routeFinder.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
     "    mc.TRADE AS TRADE1 ON PVMLABOURREQ1.trd_oi = TRADE1.tradoi FULL OUTER JOIN\n",
     "    mc.EMPLOYEE AS EMPLOYEE2 ON PMTASK1.plnr_oi = EMPLOYEE2.empoi ON EMPLOYEE1.empoi = PMTASK1.supr_oi ON PMJOB1.pmjboi = PMTASK1.pmjob_oi ON TSKLNK1.pmtsk_oi = PMTASK1.pmtkoi ON \n",
     "    MAINTENT1.mtnoi = TSKLNK1.mtn_oi\n",
-    "WHERE        (1 = 1) AND (TSKLNK1.ci_cnc_date IS NULL) AND (PMJOB1.ci_cnc_date IS NULL) AND (PMTASK1.ci_cnc_date IS NULL) AND (pmtl_freq1.trigint IS NOT NULL) AND (pmtl_freq1.frqval_amt IS NOT NULL)\n",
+    "WHERE        (1 = 1) AND (TSKLNK1.ci_cnc_date == null) AND (PMJOB1.ci_cnc_date == null) AND (PMTASK1.ci_cnc_date == null) AND (pmtl_freq1.trigint != null) AND (pmtl_freq1.frqval_amt != null)\n",
     "ORDER BY PM_JOB, PMTASK1.tskid\"\"\"\n",
     "\n",
     "\n",
